--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -72,7 +72,8 @@
 		box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
 		-webkit-box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
 		-moz-box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
-		background-color: rgba(81, 255, 183, 0.8);
+		background-color: rgba(67, 209, 209, 0.938);
+		color: black;
 	}
 }
 
