--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@
   padding: 0;
   box-sizing: border-box; }
 
+/* --------------------------------------------------
+
+   Breakpoint Settings
+   -------------------------------------------------- */
+/* --------------------------------------------------
+
+   Breakpoint Mixin
+   -------------------------------------------------- */
 .countdown {
   min-height: 100vh;
   display: flex;
@@ -27,6 +35,9 @@
     margin-bottom: 20px;
     text-transform: uppercase;
     font-size: 50px; }
+    @media (max-width: 667px) {
+      .countdown__title {
+        font-size: 20px; } }
   .countdown__timer {
     display: flex;
     justify-content: center;
@@ -38,18 +49,26 @@
     justify-content: center;
     align-items: center;
     margin-left: 30px; }
+    @media (max-width: 667px) {
+      .countdown__block {
+        margin-left: 0; } }
     .countdown__block:first-child {
       margin: 0; }
   .countdown .seconds {
     width: 120px; }
   .countdown__desc {
     font-size: 10px; }
+  .countdown__random-text {
+    font-size: 30px;
+    box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
+    background-color: rgba(255, 255, 255, 0.822);
+    padding: 10px; }
   .countdown__modal {
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 50%;
-    height: 30%;
+    width: 20%;
+    height: 15%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -60,10 +79,15 @@
     -webkit-box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
     -moz-box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
     background-color: rgba(67, 209, 209, 0.938);
-    color: black; }
+    color: black;
+    transition: opacity 2s; }
+    .countdown__modal-text {
+      font-size: 30px;
+      text-transform: uppercase; }
 
 .hidden {
-  display: none; }
+  opacity: 0; }
 
 .visible {
-  display: flex; }
+  display: flex;
+  opacity: 1; }
