--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,6 +28,10 @@
 		margin-bottom: 20px;
 		text-transform: uppercase;
 		font-size: 50px;
+
+		@include breakpoint('s') {
+			font-size: 20px;
+		}
 	}
 
 	&__timer {
@@ -43,6 +47,9 @@
 		justify-content: center;
 		align-items: center;
 		margin-left: 30px;
+		@include breakpoint('s') {
+			margin-left: 0;
+		}
 
 		&:first-child {
 			margin: 0;
@@ -57,12 +64,19 @@
 		font-size: 10px;
 	}
 
+	&__random-text {
+		font-size: 30px;
+		box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
+		background-color: rgba(255, 255, 255, 0.822);
+		padding: 10px;
+	}
+
 	&__modal {
 		align-items: center;
 		justify-content: center;
 		position: absolute;
-		width: 50%;
-		height: 30%;
+		width: 20%;
+		height: 15%;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
@@ -74,12 +88,20 @@
 		-moz-box-shadow: -2px 2px 17px -8px rgba(0, 0, 0, 0.81);
 		background-color: rgba(67, 209, 209, 0.938);
 		color: black;
+		transition: opacity 2s;
+
+		&-text {
+			font-size: 30px;
+			text-transform: uppercase;
+		}
 	}
 }
 
 .hidden {
-	display: none;
+	// display: none;
+	opacity: 0;
 }
 .visible {
 	display: flex;
+	opacity: 1;
 }
